2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/data_to_csv.sh,
	* tests/scripts/compute_regressions.sh,
	* tests/scripts/checker_perfcorrect.sh: New. Add a
	performance/correctness regression mechanism.

	* tests/Makefile.am: Update accordingly. Add new testing rules:
	correctness-check-small, correctness-check, performance-check-small,
	performance-check, performance-correctness-check-small,
	performance-correctness-check

2011-07-22  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c: Add an internal option for the number
	of machine registers (used for the punroller cost model).
	* driver/pocc/driver-pastops.c: Call the new loop unroller.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Invoke the new loop bound hoister
	from PAST.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Provide a post-ptile vectorizer,
	by separating out point loops and operate only on them, using fake
	parameters to make the loops affine.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Update of the PTile svn
	repository (now located at OSU).

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Fix a bug when processing programs
	with no loop.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch creates the options:
	--punroll
	--punroll-size
	--unroll-and-jam
	To control the new punroller module, that performs loop unrolling
	the CLAST.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c,
	* driver/src/Makefile.am,
	* driver/pocc/Makefile.am: Add new unrolling options.

	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,