@@ -1,5 +1,12 @@
 2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
+	* tests/scripts/conflist-small.txt,
+	* tests/scripts/conflist-large.txt: New. Store the flag to be tested.
+	* tests/scripts/checker_perfcorrect.sh: Use the flag files instead
+	of hardwired configurations.
+
+2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
 	* tests/scripts/data_to_csv.sh,
 	* tests/scripts/compute_regressions.sh,
 	* tests/scripts/checker_perfcorrect.sh: New. Add a
